<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="facebook_app_id">792925301515255</string>
    <string name="fb_login_protocol_scheme">fb792925301515255</string>
    <string name="app_name">Spine</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="anytime_anywhere">Anytime.Anywhere.</string>
    <string name="connect_with_people_with_your_interests">Connect with people with your interests.</string>
    <string name="the_spiritual_network">The Spiritual Network</string>
    <string name="s_p_i_n_e">S P I N E</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="or">__________Or__________</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="username">Username</string>
    <string name="town">Town</string>
    <string name="continue_">Continue</string>
    <string name="i_have_read_and_agree_to_the_terms_of_service_and_privacy_policy">
        I have read and agree to the Terms of Service and Privacy Policy</string>
    <string name="verification_code_has_been_sent_to_your_email_please_check_junk_folder_in_case_code_is_not_received">
        Verification code has been sent to your email. Please check junk folder in case code is not received.</string>
    <string name="verification_on_number">Verification code has been sent to your mobile. Please check your inbox.</string>
    <string name="haven_t_received_a_code">Haven\'t received a code?</string>
    <string name="u_get_code_again_u"><u>Get code again</u></string>
    <string name="u_get_code_via_sms_u"><u>Get code via SMS</u></string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="next">Next</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="search_spine">Search</string>
    <string name="spine">Spine</string>
    <string name="events">Events</string>
    <string name="podcasts">Podcasts</string>
    <string name="activities">Activities</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_you">For you</string>
    <string name="following">Following</string>
    <string name="hello">Hello,</string>
    <string name="welcome">WELCOME</string>
    <string name="see_all">See All</string>
    <string name="spine_impulse">SPINE IMPULSE</string>
    <string name="stories">STORIES</string>
    <string name="trending_categories">TRENDING CATEGORIES</string>
    <string name="recommended_followers">RECOMMENDED FOLLOWERS</string>
    <string name="search_event">Search Event</string>
    <string name="search_events">Search Events</string>
    <string name="search_podcasts">Search podcasts</string>
    <string name="listen">Listen</string>
    <string name="watch">Watch</string>
    <string name="you">You</string>
    <string name="view_profile">View Profile</string>
    <string name="follow">Follow</string>
    <string name="inspirational_thoughts_and_wisdom_to_encourage">Inspirational thoughts and wisdom to encourage…</string>
    <string name="discover_moments_of_people_s_lifes_and_get_inspired_by_them">Discover moments of People\'s lifes and get inspired by them.</string>
    <string name="follows">+ Follow</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="account_settings">Account</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="currency">Currency</string>
    <string name="usd">USD</string>
    <string name="reminders">Reminders</string>
    <string name="dark_mode">Dark mode</string>
    <string name="welcome_community_guidelines"><![CDATA[Welcome & Community Guidelines]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="invite_friends">INVITE FRIENDS</string>
    <string name="logout">LOGOUT</string>
    <string name="comments">COMMENTS</string>
    <string name="post">Post</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="followers">Followers</string>
    <string name="reply">Reply</string>
    <string name="what_would_you_like_to_post">What would you like to post?</string>
    <string name="post_a_question_or_thought">Post a question or thought</string>
    <string name="post_a_picture_or_video">Post a picture or video</string>
    <string name="post_a_story">Post a story</string>
    <string name="add_story">ADD STORY</string>
    <string name="add_image_s_or_video_s">Add image(s) or video(s)</string>
    <string name="add_title">Give your story a meaning</string>
    <string name="want_to_give_your_story_a_title_or_motto">Want to give your story a title or motto?</string>
    <string name="allow_comments">Allow comments<font color='#000'>*</font></string>
    <string name="add">Add</string>
    <string name="delete_story_after_24_hours">Delete story after 24 hours</string>
    <string name="preview">Preview</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="use_camera">Use camera</string>
    <string name="choose_existing_photo_or_video">Choose existing photo or video</string>
    <string name="camera_permission">Please allow permission to take photo or video.</string>
    <string name="post_a_question_or_share_what_s_on_your_mind">Post a question or share what\'s on your mind</string>
    <string name="save">Save</string>
    <string name="add_profile_image">ADD PROFILE IMAGE</string>
    <string name="display_name">Display name</string>
    <string name="about_me">About me</string>
    <string name="switch_to_professional_account">SWITCH TO PROFESSIONAL ACCOUNT</string>
    <string name="no_content_found">No content found</string>
    <string name="add_a_podcast">+ Add a podcast</string>
    <string name="add_an_event">+ Add an event</string>
    <string name="create_a_post">+ Create a post</string>
    <string name="filter">FILTER</string>
    <string name="what_can_we_help_you_find">What can we help you find?</string>
    <string name="location">Location<font color='#000'>*</font></string>
    <string name="dates">Dates</string>
    <string name="add_dates">Add dates</string>
    <string name="all_event_categories">All event categories</string>
    <string name="categories">Categories</string>
    <string name="find_events">FIND EVENTS</string>
    <string name="trending">Trending</string>
    <string name="members">Members</string>
    <string name="discover_people_on_spine_you_might_want_to_follow">Discover people on Spine you might want to follow.</string>
    <string name="type_comment">Type comment…</string>
    <string name="select_followers">Select Followers</string>
    <string name="add_hashtags">Add Hashtags</string>
    <string name="mark_friends">Mark Friends</string>
    <string name="link_place">Link Place</string>
    <string name="enter_up_to_5_hastags_e_g_lorem_lorem">Enter up to 5 hastags, e.g. #lorem #lorem</string>
    <string name="review_post">REVIEW POST</string>
    <string name="add_a_short_bio">Add a short bio</string>
    <string name="new_event">NEW EVENT ( MAX 24H )</string>
    <string name="add_photo">Add photo(s)</string>
    <string name="event_title_mandatory" tools:ignore="MissingTranslation">Event Title<font color='#000'>*</font></string>
    <string name="event_title">Event Title</string>
    <string name="event_type">Event Type</string>
    <string name="start">Start<font color='#000'>*</font></string>
    <string name="end">End<font color='#000'>*</font></string>
    <string name="end_date">End date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="timezone">Timezone<font color='#000'>*</font></string>
    <string name="add_link_to_event">Add link to event website</string>
    <string name="add_link_to_join_online" translatable="false">Add link to join online event</string>
    <string name="e_g_http_facebook">e.g http://facebook…</string>
    <string name="e_g_http_zoom" tools:ignore="DuplicateDefinition">e.g http://zoom…</string>
    <string name="e_g_http_www">e.g. http://www…</string>
    <string name="about_the_event">About the event*</string>
    <string name="about_the_events">ABOUT THE EVENT</string>
    <string name="who_should_join_and_why_what_will_you_do_at_your_event_minimum_50_characters">Who should join, and why? What will you do at your event? (minimum 50 characters)</string>
    <string name="event_categories">Event category*</string>
    <string name="add_categories">Add categories</string>
    <string name="fee">Fee</string>
    <string name="max_number_of_attendees">Max. number of attendees</string>
    <string name="language_the_event_is_hosted_in">Language the event is hosted in*</string>
    <string name="select">Select</string>
    <string name="select_event_type">Select event type</string>
    <string name="local_event">Local event</string>
    <string name="online_event">Online event</string>
    <string name="want_to_accept_participants">Want to accept participants?<font color='#000'>*</font></string>
    <string name="want_to_accept_participants_subtext" translatable="false">(Your event link will then only be shared with
    people you accepted)</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="misleading_title_or_content">Misleading title or content</string>
    <string name="something_else">Something else</string>
    <string name="back">Back</string>
    <string name="what_makes_it_inappropriate">What makes it inappropriate?</string>
    <string name="sexually_explicit_content">Sexually explicit content</string>
    <string name="intellectual_property_infrigement">Intellectual property infringement</string>
    <string name="promotes_violent_or_criminal_behaviour">Promotes violent or criminal behaviour</string>
    <string name="promotes_hate_speech_or_harassment">Promotes hate speech or harassment</string>
    <string name="payment">PAYMENT</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="bank_account">Bank Account</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">PayPal</string>
    <string name="by_clicking_pay_now_publish_you_agree_to_the_ad_guidelines_and_ad_terms_and_conditions_of_the_spiritual_network"><![CDATA[By clicking “Pay Now & Publish”, you agree to the Ad Guidelines and Ad Terms and Conditions of the Spiritual Network.]]></string>
    <string name="pay_now_publish"><![CDATA[PAY NOW & PUBLISH]]></string>
    <string name="third_layout" translatable="false">Hilf uns gemeinsam, eine starke Gemeinschaft aufzubauen.</string>
    <string name="third_layout_one" translatable="false">Sei freundlich, höflich und hilfsbereit.</string>
    <string name="third_layout_two" translatable="false">Lasst uns alle einander mit Respekt behandeln.</string>
    <string name="third_layout_three" translatable="false">Respektlose Kommentare werden sofort gelöscht und wir bitten dich, jeglichen Verstoß sofort zu melden, um andere zu schützen.</string>
    <string name="save_amp_exit" translatable="false"><![CDATA[Save & Exit]]></string>
    <string name="feed">Feed</string>
    <string name="about">ABOUT</string>
</resources>