<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/spineFragment"
        android:title="@string/feed"
        android:icon="@drawable/ic_spine_home"
        />
    <item
        android:id="@+id/eventFragment"
        android:title="@string/events"
        android:icon="@drawable/ic_events"
        />
    <item
        android:id="@+id/podcastsFragment"
        android:title="@string/podcasts"
        android:icon="@drawable/ic_podcasts"
        />
    <item
        android:id="@+id/activitiesFragment"
        android:title="@string/activities"
        android:icon="@drawable/ic_noti"
        />
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        />
</menu>