<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/btn_bg"
    android:layout_height="wrap_content"
    >



        <ImageButton
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/imageButton66"
            android:layout_width="@dimen/_150dp"
            android:layout_height="@dimen/eight"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@android:color/transparent"
            android:src="@drawable/round_gray_back" />


    <TextView
        android:id="@+id/textView256"
        style="@style/TitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixteen"
        android:layout_marginTop="@dimen/sixteen"
        android:layout_marginEnd="@dimen/sixteen"
        android:text="@string/what_makes_it_inappropriate"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton66" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen"
        app:layout_constraintEnd_toEndOf="@+id/textView256"
        app:layout_constraintStart_toStartOf="@+id/textView256"
        app:layout_constraintTop_toBottomOf="@+id/textView256">

        <View
            android:id="@+id/view29"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/eight"
            android:background="@color/gray_tint" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="@dimen/eight"
            android:text="@string/misleading_title_or_content"
            android:textColor="@color/text_black" />

        <View
            android:id="@+id/view30"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/eight"
            android:background="@color/gray_tint" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="@dimen/eight"
            android:text="@string/sexually_explicit_content"
            android:textColor="@color/text_black" />

        <View
            android:id="@+id/view31"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/eight"
            android:background="@color/gray_tint" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="@dimen/eight"
            android:text="@string/promotes_hate_speech_or_harassment"
            android:textColor="@color/text_black" />

        <View
            android:id="@+id/view32"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/eight"
            android:background="@color/gray_tint" />


        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="@dimen/eight"
            android:text="@string/promotes_violent_or_criminal_behaviour"
            android:textColor="@color/text_black" />

        <View
            android:id="@+id/view33"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/eight"
            android:background="@color/gray_tint" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="@dimen/eight"
            android:text="@string/intellectual_property_infrigement"
            android:textColor="@color/text_black" />

        <View
            android:id="@+id/view34"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/eight"
            android:background="@color/gray_tint" />
        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="@dimen/eight"
            android:text="@string/something_else"
            android:textColor="@color/text_black" />

        <View
            android:id="@+id/view35"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/eight"
            android:background="@color/gray_tint" />

    </RadioGroup>

    <Button
        android:id="@+id/button91"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight"
        android:text="@string/next"
        android:textAllCaps="true"
        style="@style/ButtonRound"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/button92"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight"
        android:layout_marginBottom="@dimen/eight"
        android:text="@string/back"
        android:textAllCaps="true"
        style="@style/TextButton"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button91"
        app:layout_constraintStart_toStartOf="@+id/button91"
        app:layout_constraintTop_toBottomOf="@+id/button91" />

</androidx.constraintlayout.widget.ConstraintLayout>