<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.home.menus.events.addevents.AddAboutEventActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:contentDescription="@string/app_name"
            android:id="@+id/imageButton16"
            style="@style/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView90"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about"

            />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/eight" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/eight"
            android:background="@drawable/round_button_bg"
            android:text="@string/save_amp_exit"
            android:textSize="@dimen/_9sdp"
            tools:ignore="RelativeOverlap" />
        <View
            android:layout_below="@+id/btn_save"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@android:color/darker_gray"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </RelativeLayout>
    <EditText
        android:backgroundTint="@color/white"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:id="@+id/edt_about"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:padding="@dimen/_12sdp"
        android:textSize="@dimen/_12sdp"
        android:text="@string/who_should_join_and_why_what_will_you_do_at_your_event_minimum_50_characters"

        />
</LinearLayout>