<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_300"
    android:layout_height="wrap_content"
    android:background="@drawable/round_gray_back"
    android:padding="@dimen/eight"
    >

    <TextView
        android:id="@+id/textView165"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleText"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView166"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight"
        android:text="@string/old_password"
        android:textColor="@color/text_black"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword3"
        app:layout_constraintTop_toBottomOf="@+id/textView165" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView166" />

    <TextView
        android:id="@+id/textView167"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight"
        android:text="@string/new_password"
        android:textColor="@color/text_black"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword3"
        app:layout_constraintStart_toStartOf="@+id/textView167"
        app:layout_constraintTop_toBottomOf="@+id/textView167" />

    <TextView
        android:id="@+id/textView168"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight"
        android:text="@string/confirm_password"
        android:textColor="@color/text_black"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword4" />

    <EditText
        android:id="@+id/editTextTextPassword5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword4"
        app:layout_constraintStart_toStartOf="@+id/textView168"
        app:layout_constraintTop_toBottomOf="@+id/textView168" />

    <Button
        android:id="@+id/button65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight"
        android:layout_marginBottom="@dimen/eight"
        android:background="@drawable/round_button_bg"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword5" />

    <Button
        android:id="@+id/button66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight"
        android:background="@drawable/round_button_bg"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword5" />
</androidx.constraintlayout.widget.ConstraintLayout>